chore: add infrastructure improvements and remaining enhancements
Add various infrastructure improvements, configurations, and enhancements
across the codebase:

**Installer Configurations:**

- Logback configurations for agent logging:
  - logback-agent-file.xml: File-based logging configuration
  - logback-agent-stdout.xml: Console logging configuration
  - Improved log formatting and rotation settings

- Configuration files:
  - minimal/50main/java.xml: Java plugin minimal configuration

- Build scripts:
  - digest.sh: Script for computing file digests

**Common Infrastructure:**

- Pair.java: Generic pair utility class for tuple-like data structures
- TypeUtils: Enhanced type manipulation utilities

**Dump File Management:**

- DataInputStreamEx: Extended input stream with additional capabilities
- DumpFileLog: Enhanced dump file logging
- DumpFileManager: Improved dump file lifecycle management
- FilesEnumeration: Better file enumeration utilities
- DumpFileManagerTest: Test coverage for dump management

**Parser Improvements:**

- FetchThreadDump: Enhanced thread dump fetching
- ProfilerTraceReader: Improved trace reading
- SuspendLogReader: Better suspend log parsing
- ErrorMessage: Enhanced error message handling
- AggregateCallsToXLSXListener: Excel export improvements
- CallsToXLSXListener: Call data Excel export enhancements
- SunJMXThreadFormatParser: JMX thread format parsing updates
- SunThreadFormatParser: Thread format parsing improvements

**Web Enhancements:**

- Time.java: New servlet for time synchronization/display
- Installer: Web installer improvements
- TreeFetcher: Tree data fetching enhancements
- WebModule: Guice module updates
- WARLauncher: WAR launcher improvements
- web.xml, web.client-cert.xml: Web configuration updates

**Plugin Updates:**

- Various plugin configuration tweaks across:
  - brave, cassandra, cassandra4: Minor config updates
  - jaeger, ocelot: Tracing plugin improvements
  - vertx: Vert.x plugin enhancements

**UI Imp